--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-hello check check check
+<!DOCTYPE html>
+<html>
+<head>
+<title></title>
+</head>
+  <body>
+    <h1>  Hello</h1>
+<p>Hello, my name is Rishi Potta</p>
+
+</a>
+
+    <p><h3><u>About me:</u></h2></p>
+    <h2><u><p>Hobbies</p></u></h2>
+    <ul>
+    <li>Running</li>
+    <li>Swimming</li>
+    <li>Bicycling</li>
+    <li>Skateboarding</li>
+    <li>Randomly walking around my house</li>
+
+  <u><h2><p>Sports I play</p></h2></u>
+    </ul>
+    <ol>
+    <li>Basketball</li>
+    <li>Soccer</li>
+    <li>Tennis</li>
+    <li>Football</li>
+    <li>Table Tennis</li>
+    </ol>
+
+    <table border="black"
+    <tr>
+    <td>What</td>
+    <td>is</td>
+    <td>my</td>
+    <td>favorite</td>
+      <td>color?</td>
+    </tr>
+
+    <tr>
+    <td>My</td>
+    <td>favorite</td>
+    <td>color</td>
+    <td>is</td>
+      <td>green!</td>
+    </tr>
+    <p><h5>My favorite animal are fishies bc they are cool</p><h3/></h5>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/0gT8Ty0ClHc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </body>
+  </html>
