--- a/index.html
+++ b/index.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
+  <head>
+    <title>About Rishi Potta</title>
+    <link rel="stylesheet" href="main.css"></link>
+  </head>
   <body>
-    <h1>  Hello</h1>
-<p>Hello, my name is Rishi Potta</p>
+    <div class="navbar">
+      <a href="about-me.html">About Me</a> ~ <a href="google.com">Google</a> <a href "www.youtube.com"> ~ Youtube
+    </div>
 
-</a>
+    <div class="first-section">
+      <h1 id="top" class="blue-heading">About Galerius Constantine</h1> <!--Heading-->
+      <p>Hello, my name is <span class="blue-text">Rishi Potta</span></p> <!--Paragraph-->
+      <p><a href="about-me.html">About Me</a></p>
 
-    <p><h3><u>About me:</u></h2></p>
-    <h2><u><p>Hobbies</p></u></h2>
-    <ul>
-    <li>Running</li>
-    <li>Swimming</li>
-    <li>Bicycling</li>
-    <li>Skateboarding</li>
-    <li>Randomly walking around my house</li>
 
-  <u><h2><p>Sports I play</p></h2></u>
-    </ul>
-    <ol>
-    <li>Basketball</li>
-    <li>Soccer</li>
-    <li>Tennis</li>
-    <li>Football</li>
-    <li>Table Tennis</li>
-    </ol>
+    <br/> <!--Extra Line Break-->
+    <p style="color: blue; font-family: 'Impact';">My favorite sport is basketball or Soccer</p> <!--Paragraph-->
+    <p>
 
-    <table border="black"
-    <tr>
-    <td>What</td>
-    <td>is</td>
-    <td>my</td>
-    <td>favorite</td>
-      <td>color?</td>
-    </tr>
 
-    <tr>
-    <td>My</td>
-    <td>favorite</td>
-    <td>color</td>
-    <td>is</td>
-      <td>green!</td>
-    </tr>
-    <p><h5>My favorite animal are fishies bc they are cool</p><h3/></h5>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/0gT8Ty0ClHc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </body>
-  </html>
+      </video>
+      <p><b>My favorite animal are fishes because they can swim.</p></b>
+    </p>
+
+    <table border="black">
+      <tr>
+        <td>one</td>
+        <td>two</td>
+        <td>three</td>
+      </tr>
+      <tr>
+        <td>four</td>
+        <td>five</td>
+        <td>six</td>
+      </tr>
+    </table>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+
+    <a href="#top">Top of page</a>
+  </body>
+</html>
