updated with w3css

--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
   </head>
   <body>
     <div class="navbar">
-      <a href="about-me.html">About Me</a> ~ <a href="google.com">Google</a> <a href "www.youtube.com"> ~ Youtube
+      <a href="about-myself.html"</a> ~ <a href="google.com">Google</a>
     </div>
 
     <div class="first-section">
-      <h1 id="top" class="blue-heading">About Galerius Constantine</h1> <!--Heading-->
-      <p>Hello, my name is <span class="blue-text">Rishi Potta</span></p> <!--Paragraph-->
-      <p><a href="about-me.html">About Me</a></p>
+      <div class="w3-panel w3-border w3-border-red">
+        <p>hello</p>
+      </div>
 
+      <h1 id="top" class="blue-heading">About Rishi Potta</h1>
+      <p>Hello, my name is <span class="blue-text">Rishi Potta</span></p>
+      <br/>
+      <p> --> About me: <u>I am 13 years old and am currently going to Willard Middle School, My favorite color would be a lightish green. I dont really like math and my favorite subject is science. I used to play the voilin and flute but then I stopped playing them because I found instruments boring. I also joined a Website Developement Bootcamp to learn how to make my own website from scratch!</p></u>
 
     <br/> <!--Extra Line Break-->
-    <p style="color: blue; font-family: 'Impact';">My favorite sport is basketball or Soccer</p> <!--Paragraph-->
+    <p style="color: blue; font-family: 'Impact';">My favorite sport is basketball or Soccer</p>
     <p>
 
 
@@ -24,6 +28,28 @@
       </video>
       <p><b>My favorite animal are fishes because they can swim.</p></b>
     </p>
+
+    <p>and I also have a little sister named Sarina!<p/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
 
     <table border="black">
       <tr>
@@ -34,18 +60,12 @@
       <tr>
         <td>four</td>
         <td>five</td>
-        <td>six</td>
+        <td>six :)</td>
       </tr>
     </table>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
+
     <br/>
 
-    <a href="#top">Top of page</a>
+    <a href="#top">Top of page <-- </a>
   </body>
 </html>
