redo w3css update

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="navbar">
-      <a href="about-myself.html"</a> ~ <a href="google.com">Google</a>
+      <a href="about-myself.html"> About Myself </a> ~ <a href="google.com">Google</a>
     </div>
 
     <div class="first-section">
