w3css more stuff

--- a/index.html
+++ b/index.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About Rishi Potta</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+    <title><div class="w3-panel w3-border w3-border-red">
+      <p>About Me</p></title>
     <link rel="stylesheet" href="main.css"></link>
   </head>
-  <body>
-    <div class="navbar">
-      <a href="about-myself.html"> About Myself </a> ~ <a href="google.com">Google</a>
-    </div>
+  <body.
 
+  <div class="w3-bar w3-black">
+  <a href="#" class="w3-bar-item w3-button">Home</a>
+  <a href="#" class="w3-bar-item w3-button">Link 1</a>
+  <a href="#" class="w3-bar-item w3-button">Link 2</a>
+  <a href="#" class="w3-bar-item w3-button">Link 3</a>
+</div>
     <div class="first-section">
-      <div class="w3-panel w3-border w3-border-red">
-        <p>hello</p>
+      <div class="w3-panel w3-border w3-border-white">
+        <p></p>
       </div>
-
+      <div class="w3-panel w3-teal">
+        <p>:)<p>
+        <div class="w3-container w3-center">
+  <h2>Welcome to my Website!</h2>
+</div>
+      </div>
+      <br/>
       <h1 id="top" class="blue-heading">About Rishi Potta</h1>
       <p>Hello, my name is <span class="blue-text">Rishi Potta</span></p>
-      <br/>
-      <p> --> About me: <u>I am 13 years old and am currently going to Willard Middle School, My favorite color would be a lightish green. I dont really like math and my favorite subject is science. I used to play the voilin and flute but then I stopped playing them because I found instruments boring. I also joined a Website Developement Bootcamp to learn how to make my own website from scratch!</p></u>
+      <p>AGE <span color class="w3-badge">13</span></p>
 
-    <br/> <!--Extra Line Break-->
+
+    <div class="w3-panel w3-border w3-border-red w3-hover-border-green">
+      <p><p> --> About me: <u>I am 13 years old and am currently going to Willard Middle School, My favorite color would be a lightish green. I dont really like math and my favorite subject is science. I used to play the voilin and flute but then I stopped playing them because I found instruments boring. I also joined a Website Developement Bootcamp to learn how to make my own website from scratch!</p>
+    </div>
     <p style="color: blue; font-family: 'Impact';">My favorite sport is basketball or Soccer</p>
     <p>
 
