w3css push stuff re done

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="w3-panel w3-border w3-border-red w3-hover-border-green">
       <p><p> --> About me: <u>I am 13 years old and am currently going to Willard Middle School, My favorite color would be a lightish green. I dont really like math and my favorite subject is science. I used to play the voilin and flute but then I stopped playing them because I found instruments boring. I also joined a Website Developement Bootcamp to learn how to make my own website from scratch!</p>
-    </div>
+    </u></div>
     <p style="color: blue; font-family: 'Impact';">My favorite sport is basketball or Soccer</p>
     <p>
 
@@ -42,8 +42,12 @@
       </video>
       <p><b>My favorite animal are fishes because they can swim.</p></b>
     </p>
+<p>My favorite games are Rocket League and Valorant<p/>
+  <br/>
 
-    <p>and I also have a little sister named Sarina!<p/>
+      <div class="w3-yellow">
+  <h2>I also have a sister named Sarina!</h2>
+</div>
       <br/>
       <br/>
       <br/>
@@ -54,6 +58,7 @@
       <br/>
       <br/>
       <br/>
+
       <br/>
       <br/>
       <br/>
@@ -80,6 +85,6 @@
 
     <br/>
 
-    <a href="#top">Top of page <-- </a>
+    <a href="#top">Top of page. <-- </a>
   </body>
 </html>
