--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
   <div class="w3-bar w3-black">
   <a href="#" class="w3-bar-item w3-button">Home</a>
-  <a href="#" class="w3-bar-item w3-button">Link 1</a>
-  <a href="#" class="w3-bar-item w3-button">Link 2</a>
-  <a href="#" class="w3-bar-item w3-button">Link 3</a>
+
+  <a href="#" class="w3-bar-item w3-button">About Me</a>
+
 </div>
     <div class="first-section">
       <div class="w3-panel w3-border w3-border-white">
@@ -42,7 +42,7 @@
       </video>
       <p><b>My favorite animal are fishes because they can swim.</p></b>
     </p>
-<p>My favorite games are Rocket League and Valorant<p/>
+<p>My favorite games are Minecraft, Valorant, and Rocket League !!<p/>
   <br/>
 
       <div class="w3-yellow">
@@ -70,18 +70,7 @@
       <br/>
       <br/>
 
-    <table border="black">
-      <tr>
-        <td>one</td>
-        <td>two</td>
-        <td>three</td>
-      </tr>
-      <tr>
-        <td>four</td>
-        <td>five</td>
-        <td>six :)</td>
-      </tr>
-    </table>
+
 
     <br/>
 
